# daily-planner-agent

./: .env.example  .gitignore  ARCHITECTURE.md  OAUTH_SETUP.md  OBSERVABILITY.md  PLAN-v1.md  README.md  SETUP.md  app.py  graph.py  main.py  pyproject.toml  tools.py
src/: __init__.py
src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  utils.py
src/config/: __init__.py  settings.py
src/integrations/: __init__.py  calendar.py  diagnostics.py  observability.py  parsers.py  todoist.py
src/ui/: __init__.py  state_manager.py  streamlit_app.py
src/ui/components/: __init__.py  chat.py  event_suggestions.py  schedule_display.py  sidebar.py
